rounded out the edges of the voting bar

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <div id="header">VDL Tipping</div>
 
     <div class="match-tipping">
-        <div class="percentage-bar">
-            <div id="blueSection" class="section"></div>
-            <div id="drawSection" class="section"></div>
-            <div id="greySection" class="section"></div>
+        <div class="percentage-bar-container">
+            <div class="percentage-bar">
+                <div id="blueSection" class="section"></div>
+                <div id="purpleSection" class="section"></div>
+                <div id="redSection" class="section"></div>
+            </div>
         </div>
         <div class="buttons">
             <button class="btn" onclick="updateSection('blue')">Blue</button>
-            <button class="btn" onclick="updateSection('white')">Draw</button>
-            <button class="btn" onclick="updateSection('grey')">Grey</button>
+            <button class="btn" onclick="updateSection('purple')">Draw</button>
+            <button class="btn" onclick="updateSection('red')">Red</button>
         </div>
     </div>
 
